# RustCV

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml
rustcv/: Cargo.toml
rustcv-backend-avf/: Cargo.toml
rustcv-backend-avf/examples/: camera_view.rs
rustcv-backend-avf/src/: delegate.rs  gcd.rs  lib.rs  stream.rs
rustcv-backend-msmf/: Cargo.toml
rustcv-backend-msmf/examples/: camera_view.rs
rustcv-backend-msmf/examples/camera_view/: convert.rs  main.rs
rustcv-backend-msmf/src/: controls.rs  device.rs  lib.rs  pixel_map.rs  stream.rs
rustcv-backend-v4l2/: Cargo.toml
rustcv-backend-v4l2/examples/: camera_view.rs  dqbuf_bench.rs  dual_camera_view.rs  dual_web_streaming.rs  web_streaming.rs
rustcv-backend-v4l2/src/: controls.rs  device.rs  lib.rs  pixel_map.rs  stream.rs
rustcv-camera/: Cargo.toml  build.rs
rustcv-camera/benches/: capture.rs
rustcv-camera/examples/: camera_demo.rs  resolution_bench.rs  zero_copy_demo.rs
rustcv-camera/src/: camera.rs  config.rs  decode.rs  error.rs  frame.rs  lib.rs  mat.rs  pixel_format.rs  videocapture.rs
rustcv-camera/src/backend/: avf.rs  avf_bridge.h  avf_bridge.m  mod.rs  msmf.rs  v4l2.rs  v4l2_sys.rs
rustcv-camera/src/backend/linux/: mod.rs
rustcv-camera/src/backend/macos/: bridge.m  mod.rs
rustcv-core/: Cargo.toml
rustcv-core/src/: builder.rs  error.rs  frame.rs  lib.rs  pixel_format.rs  telemetry.rs  time.rs  traits.rs
rustcv-simulation/: Cargo.toml
rustcv/examples/: camera_demo.rs
rustcv/src/: lib.rs
rustcv/src/core/: mat.rs  mod.rs  tick_meter.rs
rustcv/src/highgui/: mod.rs
rustcv/src/imgcodecs/: mod.rs
rustcv/src/imgproc/: drawing.rs  mod.rs
rustcv/src/internal/: runtime.rs
rustcv/src/videoio/: backend.rs  mod.rs
