[package]
name = "rustcv-backend-avf"
version = "0.1.0"
edition = "2024"

[features]
simulation = []

[dependencies]
# 核心库引用
rustcv-core = { path = "../rustcv-core" }

# 错误处理与日志
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["sync", "rt", "macros"] }
async-trait = "0.1"

# --- macOS 原生绑定 (核心依赖) ---
# 用于编写 Objective-C 类 (Delegate)
objc2 = "0.6"
block2 = "0.6"
dispatch2 = "0.3"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSDictionary",
    "NSValue",
    "NSError",
] }
objc2-av-foundation = { version = "0.3", features = [
    "AVCaptureSession",
    "AVCaptureDevice",
    "AVCaptureInput",
    "AVCaptureOutput",
    "AVCaptureVideoDataOutput",
    "AVMediaFormat",
    "AVCaptureSessionPreset",
] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMTime"] }
objc2-core-video = { version = "0.3", features = ["CVPixelBuffer", "CVReturn"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
minifb = "0.24"                                  # 用于示例显示窗口
