[package]
name = "rustcv-backend-msmf"
version = "0.1.0"
edition = "2021"
authors = ["Leon <echo_ai@foxmail.com>"]
description = "Windows MS-MF backend for RustCV"
license = "MIT"
repository = "https://github.com/rustcv/rustcv"
keywords = ["camera", "video", "driver", "robotics", "computer-vision"]
categories = ["hardware-support", "multimedia::video", "science::robotics"]

[features]
simulation = []

[target.'cfg(target_os="windows")'.dependencies]
rustcv-core = { version = "0.1", path = "../rustcv-core" }

windows = { version = "0.62", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }

tokio = { version = "1.0", features = ["fs", "rt"] }
async-trait = "0.1"

tracing = "0.1"
thiserror = "1.0"

bitflags = "2.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[target.'cfg(target_os="windows")'.dev-dependencies]
minifb = "0.22"
image = "0.24"
tracing-subscriber = "0.3.22"
