[package]
name = "rustcv-camera"
version = "0.1.0"
edition = "2021"
description = "Cross-platform camera capture library with zero-copy and OpenCV-compatible API"
authors = ["Leon <leon@leonrust.com>"]
repository = "https://github.com/rustcv/rustcv"
license = "MIT"
keywords = ["camera", "webcam", "v4l2", "capture", "computer-vision"]
categories = ["multimedia::video", "hardware-support"]

[features]
default = []
turbojpeg = ["dep:turbojpeg"]

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
v4l2-sys-mit = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# TODO: AVFoundation bindings

[target.'cfg(target_os = "windows")'.dependencies]
# TODO: Media Foundation bindings

[dependencies.turbojpeg]
version = "1.4"
optional = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
minifb = "0.28.0"

[[bench]]
name = "capture"
harness = false

[[example]]
name = "camera_demo"

[[example]]
name = "zero_copy_demo"

[[example]]
name = "resolution_bench"
