[package]
name = "rustcv-simulation"
version = "0.1.0"
edition = "2021"
authors = ["Leon <echo_ai@foxmail.com>"]
license = "MIT"
repository = "https://github.com/rustcv/rustcv"
keywords = ["camera", "video", "driver", "robotics", "computer-vision"]
categories = ["hardware-support", "multimedia::video", "science::robotics"]

[dependencies]
