[package]
name = "rustcv"
version = "0.1.2"
edition = "2021"
authors = ["Leon <leon@leonrust.com>"]
description = "A high-performance computer vision library for Rust."
license = "MIT"
repository = "https://github.com/RustCV/RustCV"
keywords = [
    "RustCV",
    "Computer Vision",
    "Image Processing",
    "Camera Drivers",
    "Robotics",
]
# 排除本地测试用的 assets 或脚本，减小包体积
exclude = ["assets/*", ".github/*"]
readme = "../README.md"

[features]
turbojpeg = ["dep:turbojpeg"]

[dependencies]
# --- 核心依赖 ---
rustcv-core = { version = "0.1", path = "../rustcv-core" }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
once_cell = "1.18"                                         # 用于惰性初始化全局 Runtime
crossbeam-channel = "0.5"                                  # 用于同步 API 和异步 Runtime 通信

# --- 异步运行时 (隐藏在幕后) ---
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

# --- 图像编解码 & 绘图 (生态整合) ---
image = "0.24"     # imread/imwrite
imageproc = "0.23" # drawing
rusttype = "0.9"   # 字体渲染

turbojpeg = { version = "1.4", optional = true }

# --- GUI (HighGUI) ---
minifb = "0.24"

# --- 后端驱动 (根据平台自动加载，无需 features) ---
[target.'cfg(target_os = "linux")'.dependencies]
rustcv-backend-v4l2 = { version = "0.1", path = "../rustcv-backend-v4l2" }

[target.'cfg(target_os = "macos")'.dependencies]
rustcv-backend-avf = { version = "0.1", path = "../rustcv-backend-avf" }

[target.'cfg(target_os = "windows")'.dependencies]
rustcv-backend-msmf = { version = "0.1", path = "../rustcv-backend-msmf" }
